fix(StarryNight): visual defects and add rounded scrollbar (#1228)
* fix(Dribblish): broken layout

Fix Compatibility issues with Spotify 1.2.73 or above

* fix: compatibility with other versions

* use ResizeObserver to get reliable width updates

* use clientWidth if the variable is not present

* feat: use rounded scrollbar style

* fix(StarryNight): #1213

--- a/StarryNight/user.css
+++ b/StarryNight/user.css
@@ -1,5 +1,10 @@
 .button-module__button___hf2qg_marketplace {
-  color: var(--spice-subtext)
+  color: var(--spice-subtext);
+}
+
+.os-scrollbar {
+  --os-handle-border-radius: 16px !important;
+  --os-size: 8px !important;
 }
 
 .main-entityHeader-backgroundColor {
@@ -135,6 +140,21 @@
 
 .playlist-playlist-playlistContent {
   background: #00000000 !important;
+}
+
+.UrfDp0_mKGL9hkfh9g_R,
+.UrfDp0_mKGL9hkfh9g_R:before,
+.mzBZbIt7NDzzTffimVhn,
+.WBFaUw_oOfN2m4aTxggt,
+.main-nowPlayingView-contextItemInfo:before,
+.playlist-playlist-actionBarBackground-background,
+.main-entityHeader-backgroundColor,
+.Root__now-playing-bar {
+  background: none !important;
+}
+
+.sl_aPp6GDg05ItSfmsS7 {
+  display: none;
 }
 
 .main-nowPlayingBar-nowPlayingBar {
